objects/Contract.object
<CustomObject>
    <fields>
        <fullName>AIA_Approval_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US:750
To check the record is submitted for approval.</description>
        <label>AIA Approval Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIA_Status__c</fullName>
        <label>AIA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft Creation</fullName>
                </value>
                <value>
                    <fullName>Internal Approvals</fullName>
                </value>
                <value>
                    <fullName>Post Internal Review Document Creation</fullName>
                </value>
                <value>
                    <fullName>Sales Approval</fullName>
                </value>
                <value>
                    <fullName>Additional Printed Benefit Guides</fullName>
                </value>
                <value>
                    <fullName>Customer Approval</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved - Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved - Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved - Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_C_C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Benefit Contract Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Contract_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Contract Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Legal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Sales_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSS_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BSS Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Contract Details Captured", "Missing: "&amp;IF( LEN( TEXT(MONTH( StartDate ))) = 0, "Contract Start Date, ","")&amp;""&amp;IF(LEN(  TEXT(ContractTerm)) = 0, "Contract Term, ","")&amp;""&amp;IF( LEN( BillingCity ) = 0, "Complete Contract Address, ","")&amp;""&amp;IF(LEN( CustomerSignedId ) = 0, "Customer Signature, ","")&amp;""&amp;IF( ISPICKVAL(  OwnerExpirationNotice ,""), "Owner Expiration Notice",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(TEXT(MONTH(StartDate)))=0, 0,20) + IF( LEN(TEXT( ContractTerm ))=0, 0,20) + IF( LEN( BillingCity ) = 0, 0,20) + IF( LEN( CustomerSignedId) = 0, 0,20) + IF( ISPICKVAL(  OwnerExpirationNotice ,""), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_Review_Req_d__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Manager Review Req'd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Fully-Insured non-CFMI Matrix</fullName>
                </value>
                <value>
                    <fullName>Fully-Insured CFMI Matrix</fullName>
                </value>
                <value>
                    <fullName>Facets Dental</fullName>
                </value>
                <value>
                    <fullName>Facets Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
</CustomObject>